<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/greeting"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/entriesCardView"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/entries"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <ImageView
            android:id="@+id/entriesImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/entries"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/entries" />

        <TextView
            android:id="@+id/entriesTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:contentDescription="@string/entries"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/entries"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/entriesImageView"
            app:layout_constraintTop_toTopOf="@id/entriesImageView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dishesCardView"
        android:layout_width="345dp"
        android:layout_height="112dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/dishes"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entriesCardView">

        <ImageView
            android:id="@+id/dishesImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dishes"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/plats" />

        <TextView
            android:id="@+id/dishesTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/dishes"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/dishesImageView"
            app:layout_constraintTop_toTopOf="@id/dishesImageView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dessetCardView"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/dessert"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishesCardView">

        <ImageView
            android:id="@+id/dessetImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/entries"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/dessert" />

        <TextView
            android:id="@+id/dessertTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/dessert"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/dessetImageView"
            app:layout_constraintTop_toTopOf="@id/dessetImageView" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>